<resources>
    <string name="app_name">Пушка</string>

    <!-- Common -->
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="empty" />
    <string name="search">Поиск</string>
    <string name="share">Поделиться</string>
    <string name="google">Google</string>
    <string name="vk">Вконтакте</string>

    <!-- Connection -->
    <string name="item_connection_miss">Интернет соединение отсутствует</string>

    <!-- Descriptions -->
    <string name="description_category_image">Изображение категории</string>
    <string name="description_source_image">Изображение источника</string>
    <string name="description_alert_image">Изображение уведомления</string>
    <string name="description_share_icon">Иконка расшаривания уведомления</string>
    <string name="description_empty_icon">Иконка уведомляющая о пустом списке</string>
    <string name="description_error_icon">Иконка, уведомляющая об ошибке</string>
    <string name="description_logo_icon">Иконка нашего приложения</string>
    <string name="description_vk_icon">Иконка гугла</string>
    <string name="description_google_icon">Иконка вконтакте</string>
    <string name="description_source_icon">Иконка источников</string>

    <!-- Titles -->
    <string name="title_feed">Лента</string>
    <string name="title_subscription">Мои подписки</string>
    <string name="title_settings">Настройки</string>
    <string name="title_sources">Подписаться</string>
    <string name="title_devices">Устройства</string>
    <string name="title_subscribe">Подписаться на источник</string>
    <string name="title_edit_subscription">Редактирование подписки</string>

    <string name="title_loading">Загрузка…</string>
    <string name="title_error">Ошибка загрузки</string>

    <!-- Drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="drawer_settings">Настройки</string>
    <string name="drawer_feed">Лента</string>
    <string name="drawer_sources">Подписаться</string>
    <string name="drawer_subscription">Мои подписки</string>
    <string name="drawer_devices">Устройства</string>

    <!-- Login -->
    <string name="login_enter_vk">Войти с помощью Вконтакте</string>
    <string name="login_enter_google">Войти с помощью Google</string>
    <string name="login_help">Нужна помощь?</string>
    <string name="login_text_logo">Пушка</string>
    <string name="login_auth_error">Ошибка авторизации, попробуйте позже</string>
    <string name="login_dialog_title">Вход</string>
    <string name="login_dialog_message">Пожалуйста, подождите...</string>
    <string name="login_exit_question">Вы действительно хотите выйти?</string>
    <string name="login_exit_message">Выход из приложения</string>

    <!-- Settings -->
    <string name="pref_logout_title">Выход</string>
    <string name="pref_logout_summary">Выход из приложения</string>
    <string name="pref_logout_progress_dialog_message">Пожалуйста, подождите...</string>
    <string name="pref_logout">pref_logout</string>

    <!-- Placeholder -->
    <string name="error_placeholder">Не удалось загрузить данные. Повторите попытку позже.</string>
    <string name="empty_placeholder">Здесь пока пусто</string>

    <!-- Subscribe -->
    <string name="subscribe_dropdown_placeholder">Выберите...</string>
    <string name="subscribe_dialog_message">Подождитесь, сейчас мы вас подпишем</string>
    <string name="subscribe_with_sound">Со звуком</string>
    <string name="subscribe_with_alert">Получать уведомления</string>
    <string name="subscribe_subscribe_text">Подписаться</string>
    <string name="subscribe_control_error">Данное поле обязательно для заполнения</string>

    <!-- Alerts -->
    <string name="alert_empty_placeholder_title">Ваша лента пуста</string>
    <string name="alert_empty_placeholder_subtitle">Подпишитесь на интересующие вас события</string>
    <string name="alert_empty_placeholder_action">Подписаться</string>

    <!-- Subscriptions -->
    <string name="subscriptions_empty_placeholder_title">У вас нету подписок</string>
    <string name="subscriptions_empty_placeholder_subtitle">Подпишитесь на интересующие вас события</string>
    <string name="subscriptions_empty_placeholder_action">Подписаться</string>

    <!-- Subscription -->
    <string name="subscription_change">Изменить</string>
    <string name="subscription_unsubscribe">Отписаться</string>
    <string name="subscription_unsubscribe_dialog_message">Подождите, сейчас мы вас отпишем</string>
    <string name="subscription_unsubscribe_success_message">Вы успешно отписались</string>
    <string name="subscription_unsubscribe_fail_message">Что-то пошло не так при отписке</string>
    <string name="subscription_subscribe_success_message">Вы успешно подписались на источник</string>

    <!-- Errors -->
    <string name="error_connection">Ошибка соединения</string>
    <string name="error_already_subscribed">Вы уже подписаны на данную подписку</string>
    <string name="error_source_not_found">Такого источника не существует</string>
    <string name="error_subscription_not_found">Такой подписки не существует</string>
    <string name="error_something_wrong">Что-то пошло не так</string>

    <!-- -->
    <string name="snack_retry">ПОВТОРИТЬ</string>
</resources>
