<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/main_items"
        android:checkableBehavior="single"
        >
        <item
            android:id="@+id/drawer_feed"
            android:icon="@drawable/ic_home_grey_24dp"
            android:title="@string/drawer_feed"
            />

        <item
            android:id="@+id/drawer_subscriptions"
            android:icon="@drawable/ic_notifications_grey_24dp"
            android:title="@string/drawer_subscription"
            />
    </group>

    <group
        android:id="@+id/drawer_additional_items"
        android:checkableBehavior="none"
        >
        <item
            android:id="@+id/drawer_settings"
            android:icon="@drawable/ic_settings_grey_24dp"
            android:title="@string/drawer_settings"
            />
    </group>

</menu>